--- a/troll.html
+++ b/troll.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <h1 class="deoCo">Đéo có nhé</h1>
+    <pre>
+        <img src="https://i.pinimg.com/736x/c7/e3/20/c7e3204f2720f44eb6c48083d2a150ff.jpg" alt="anh troll">
+    </pre>
   </body>
 </html>
