--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cách Thoát khỏi rank dia dành cho bạn</title>
+    <title>lvp</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Cách Thoát khỏi rank dia dành cho bạn</h1>
-    <h1>
-      <a href="troll.html">Một số Tips hữu ích</a>
-    </h1>
-    <pre>
-        <img src="https://i.pinimg.com/736x/3e/e3/a9/3ee3a9caa9161267f4a1b0fdcf04433d.jpg" alt="Ảnh asc">
-    </pre>
+    <div><a href=""></a></div>
+    <h1>BAo</h1>
   </body>
 </html>
