--- a/troll.html
+++ b/troll.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>lvp</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <h1 class="deoCo">Đéo có nhé</h1>
-    <pre>
-        <img src="https://i.pinimg.com/736x/c7/e3/20/c7e3204f2720f44eb6c48083d2a150ff.jpg" alt="anh troll">
-    </pre>
-  </body>
+  <body></body>
 </html>
